# QuantumFortress-2.0

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/bridge/: __init__.py
src/consensus/: __init__.py  adaptive_difficulty.py  mining_optimizer.py  quantumproof_v2.py  topo_nonce_v2.py
src/core/: __init__.py  adaptive_hypercube.py  auto_calibration.py  hybrid_crypto.py
src/topology/: __init__.py  homology.py  metrics.py  optimized_cache.py  sheaf_theory.py
src/topology/src/topology/: betti_numbers.py
src/utils/: __init__.py  crypto_utils.py  quantum_utils.py  topology_utils.py
