[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-fortress"
version = "2.0.0"
description = "Next-generation post-quantum blockchain with topological security"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Mironov A.A.", email = "miro-aleksej@yandex.ru"}
]
keywords = [
    "blockchain", 
    "post-quantum", 
    "cryptography", 
    "topology", 
    "quantum", 
    "hypercube", 
    "bitcoin", 
    "ethereum",
    "tvindex",
    "quantumproof"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0"
]
gpu = [
    "cupy>=10.0",
    "numba>=0.56"
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.17"
]

[tool.setuptools]
packages = ["quantum_fortress"]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["quantum_fortress*"]

[tool.setuptools.package-data]
"quantum_fortress" = ["py.typed"]

[tool.setuptools.entry-points."console_scripts"]
"qf-cli" = "quantum_fortress.cli:main"

[tool.pytest.ini_options]
addopts = "-v -ra --cov=quantum_fortress --cov-report=term-missing"
testpaths = ["tests/unit", "tests/integration", "tests/benchmarks"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", "__pycache__", "build", "dist"]

[tool.mypy]
mypy_path = "src"
files = "src/quantum_fortress"
ignore_missing_imports = true
follow_imports = "silent"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true

[tool.coverage.run]
branch = true
source = ["quantum_fortress"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2
